--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,8 +1,7 @@
 {
     "env": {
         "es2021": true,
-        "node": true,
-        "jest": true
+        "node": true
     },
     "extends": [
         "airbnb-base"
@@ -13,8 +12,27 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "import"
     ],
     "rules": {
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "ts": "never"
+            }
+        ]
+    },
+    "settings": {
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts", ".js"]
+          },
+        "import/resolver": {
+          "typescript": {
+            "project": "./server/tsconfig.json"
+          }
+        }
     }
 }
