--- a/server/package.json
+++ b/server/package.json
@@ -6,25 +6,36 @@
   "scripts": {
     "dev": "nodemon",
     "test": "jest",
-    "build": "yarn tsc",
-    "start": "node dist/server.js"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "^8.13.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "pino-pretty": "^7.6.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "pg": "^8.7.3",
+    "pino": "^7.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.5"
   }
 }
