--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "test": "jest",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -36,6 +37,6 @@
     "pg": "^8.7.3",
     "pino": "^7.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.5"
+    "typeorm": "0.2.6"
   }
 }
