--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,7 +5,8 @@
         "jest": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -14,9 +15,11 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "import"
+        "import",
+        "prettier"
     ],
     "rules": {
+        "prettier/prettier": "error",
         "import/extensions": [
             "error",
             "ignorePackages",
