--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
-    "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js",
+    "db:reset": "yarn typeorm schema:drop && yarn typeorm migration:run",
+    "db:reset:populate": "yarn db:reset && ts-node src/database/dataset/PopulateApply.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
@@ -19,17 +22,23 @@
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "i": "^0.3.7",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "npm": "^8.7.0",
     "pino-pretty": "^7.6.1",
+    "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
