--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -29,7 +29,7 @@
     "skipLibCheck": true                                 
   },
   "include": [
-    "src/**/*", "tests/**/*.ts"
+    "src/**/*", "src/tests/**/*.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
