--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,7 +18,7 @@
       },
       "ecmaVersion": 12,
       "sourceType": "module",
-      "project": "client/tsconfig.json"
+      "project": "tsconfig.json"
   },
   "plugins": [
       "react",
