--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -30,6 +30,7 @@
       "no-use-before-define": "off",
       "@typescript-eslint/no-use-before-define": ["error"],
       "react/jsx-filename-extension": "off",
-      "react/jsx-props-no-spreading": "off"
+      "react/jsx-props-no-spreading": "off",
+      "consistent-return": "off"
   }
 }
