--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -35,7 +35,7 @@
         },
         "import/resolver": {
           "typescript": {
-            "project": "./server/tsconfig.json"
+            "project": "tsconfig.json"
           }
         }
     }
