--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "antd": "^4.20.0",
     "axios": "^0.27.2",
     "next": "12.1.5",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@typescript-eslint/parser": "^5.0.0",
