--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "test": "jest",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
     "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js",
     "db:reset": "yarn typeorm schema:drop && yarn typeorm migration:run",
@@ -35,6 +35,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
+    "tsc-alias": "^1.6.11",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   },
@@ -50,7 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.6"
   },
-  "versions":{
+  "versions": {
     "node": "v16.14.2"
   }
 }
