Refactoring server structure

--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -7,6 +7,7 @@
     "database": "postgres",
     "entities": ["src/models/*.ts"],
     "migrations": ["src/database/migrations/*.ts"],
+    "synchronize": true,
     "cli": {
         "migrationsDir": "src/database/migrations",
         "entitiesDir": "src/models"
