--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -19,6 +19,8 @@
         "prettier"
     ],
     "rules": {
+        "import/no-named-as-default-member": "off",
+        "import/no-named-as-default": "off",
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
