--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,8 @@
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
     "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js",
-    "db:reset": "yarn typeorm schema:drop && yarn typeorm migration:run",
-    "db:reset:populate": "yarn db:reset && ts-node -r tsconfig-paths/register src/database/dataset/PopulateApply.ts"
+    "db:reset": "yarn typeorm schema:drop && yarn typeorm schema:sync && yarn typeorm migration:run",
+    "db:reset:populate": "yarn db:reset && ts-node -r tsconfig-paths/register src/database/dataset/populateApply.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -49,7 +49,7 @@
     "pg": "^8.7.3",
     "pino": "^7.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.6"
+    "typeorm": "0.2.21"
   },
   "versions": {
     "node": "v16.14.2"
