--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -22,6 +22,8 @@
         "import/no-named-as-default-member": "off",
         "import/no-named-as-default": "off",
         "prettier/prettier": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"],
         "import/extensions": [
             "error",
             "ignorePackages",
