--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,13 +5,14 @@
         "jest": true
     },
     "extends": [
-        "airbnb-base",
+        "airbnb-typescript/base",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "@typescript-eslint",
