--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
