--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
