--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intl": "^6.4.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
