--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "antd": "^4.20.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.8",
     "next": "12.1.5",
     "nookies": "^2.5.2",
+    "rc-picker": "^3.8.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-infinite-scroll-component": "^6.1.0",
