--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.20.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.8",
+    "lodash": "^4.17.21",
     "next": "12.1.5",
     "nookies": "^2.5.2",
     "rc-picker": "^3.8.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@typescript-eslint/parser": "^5.0.0",
