--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --inspect",
     "test": "jest",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/index.js",
