--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -31,6 +31,7 @@
       "@typescript-eslint/no-use-before-define": ["error"],
       "react/jsx-filename-extension": "off",
       "react/jsx-props-no-spreading": "off",
-      "consistent-return": "off"
+      "consistent-return": "off",
+      "@typescript-eslint/no-unused-vars": ["warn"]
   }
 }
