--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -11,5 +11,6 @@
     "cli": {
         "migrationsDir": "src/database/migrations",
         "entitiesDir": "src/models"
-    }
+    },
+    "logging": true
 }
