--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,9 +1,4 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true,
-        "jest": true
-    },
     "extends": [
         "airbnb-typescript/base",
         "prettier"
@@ -12,7 +7,7 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": ["./tsconfig.json", "./jest.config.ts"]
+        "project": ["./tsconfig.json"]
     },
     "plugins": [
         "@typescript-eslint",
@@ -23,8 +18,8 @@
         "import/no-named-as-default-member": "off",
         "import/no-named-as-default": "off",
         "prettier/prettier": "error",
-        "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error"],
+        "no-unused-vars": "warn",
+        "@typescript-eslint/no-unused-vars": ["warn"],
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -43,5 +38,6 @@
             "project": "tsconfig.json"
           }
         }
-    }
+    },
+    "ignorePatterns": ["jest.config.ts"]
 }
