--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
@@ -28,16 +28,15 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "27.5.1",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.15",
-    "npm": "^8.7.0",
     "pino-pretty": "^7.6.1",
     "prettier": "^2.6.2",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.7.0",
     "tsc-alias": "^1.6.11",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
