--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+    "env": {
+        "es2021": true,
+        "node": true,
+        "jest": true
+    },
     "extends": [
         "airbnb-typescript/base",
         "prettier"
@@ -16,6 +21,7 @@
     ],
     "rules": {
         "import/no-named-as-default-member": "off",
+        "no-useless-constructor": "off",
         "import/no-named-as-default": "off",
         "prettier/prettier": "error",
         "no-unused-vars": "warn",
