--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --inspect",
     "test": "jest",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "cd dist && node index.js",
     "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js",
     "db:reset": "yarn typeorm schema:drop && yarn typeorm schema:sync && yarn typeorm migration:run",
     "db:reset:populate": "yarn db:reset && ts-node -r tsconfig-paths/register src/database/dataset/populateApply.ts"
