--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/pdfkit": "^0.13.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^7.32.0",
@@ -45,6 +46,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "pdfkit": "^0.15.0",
     "pg": "^8.7.3",
     "pino": "^7.10.0",
     "reflect-metadata": "^0.1.13",
