fix: orm config and generic interface issues

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -45,5 +45,5 @@
           }
         }
     },
-    "ignorePatterns": ["jest.config.ts"]
+    "ignorePatterns": ["jest.config.ts", "ormconfig.js"]
 }
