--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{"src": "./dist/index.js", "use": "@vercel/node"}],
-  "routes": [{"src": "(.*)", "use": "./dist/index.js"}]
+  "routes": [{"src": "(.*)", "dest": "./dist/index.js"}]
 }
