--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js",
     "db:reset": "yarn typeorm schema:drop && yarn typeorm schema:sync && yarn typeorm migration:run",
     "db:reset:populate": "yarn db:reset && ts-node -r tsconfig-paths/register src/database/dataset/populateApply.ts",
-    "vercel-build": "schema:sync"
+    "vercel-build": "npx typeorm schema:sync"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
